# kikai

./: .gitignore  README.md  kikai.yml  meson.build
src/: kikai-build.c  kikai-build.h  kikai-builderspec.c  kikai-builderspec.h  kikai-source.c  kikai-source.h  kikai-toolchain.c  kikai-toolchain.h  kikai-utils.c  kikai-utils.h  kikai.c
